--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_wood.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_wood.yml
@@ -19,6 +19,7 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
     - to: windowWood
       completed:
