--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_ai.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_ai.yml
@@ -1,12 +1,12 @@
 - type: constructionGraph
   parent: RMC
-  id: RMCWindowSolaris
+  id: RMCWindowAI
   start: start
   graph:
   - node: start # not currently buildable
 
-  - node: windowFrameSolaris
-    entity: RMCWindowFrameSolaris
+  - node: windowFrameAI
+    entity: RMCWindowFrameAI
     edges:
     - to: start
       completed:
@@ -19,27 +19,28 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
-    - to: windowSolaris
+    - to: windowAIReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
       conditions:
       - !type:EntityAnchored {}
       steps:
-      - material: CMGlass
+      - material: CMGlassReinforced
         amount: 2
         doAfter: 2
 
-  - node: windowSolaris
-    entity: CMWindowSolaris
+  - node: windowAIReinforced
+    entity: RMCWindowAIReinforced
     edges:
-    - to: windowFrameSolaris
+    - to: windowFrameAI
       completed:
       - !type:SnapToGrid
         southRotation: true
       - !type:SpawnPrototype
-        prototype: CMSheetGlass1
+        prototype: CMSheetGlassReinforced1
         amount: 2
       conditions:
       - !type:EntityAnchored {}
