--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_corsat_reinforced.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_corsat_reinforced.yml
@@ -1,12 +1,12 @@
 - type: constructionGraph
   parent: RMC
-  id: RMCWindowHybrisaReinforced
+  id: RMCWindowCorsatReinforced
   start: start
   graph:
   - node: start # not currently buildable
 
-  - node: windowFrameHybrisaReinforced
-    entity: RMCWindowFrameHybrisaReinforced
+  - node: windowFrameCorsatReinforced
+    entity: RMCWindowFrameCorsatReinforced
     edges:
     - to: start
       completed:
@@ -19,8 +19,9 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
-    - to: windowHybrisaReinforced
+    - to: windowCorsatReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
@@ -31,10 +32,10 @@
         amount: 2
         doAfter: 2
 
-  - node: windowHybrisaReinforced
-    entity: RMCWindowHybrisaReinforced
+  - node: windowCorsatReinforced
+    entity: RMCWindowCorsatReinforced
     edges:
-    - to: windowFrameHybrisaReinforced
+    - to: windowFrameCorsatReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
