--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_hybrisa.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_hybrisa.yml
@@ -1,12 +1,12 @@
 - type: constructionGraph
   parent: RMC
-  id: RMCWindowHybrisaSpacePortReinforced
+  id: RMCWindowHybrisa
   start: start
   graph:
   - node: start # not currently buildable
 
-  - node: windowFrameHybrisaSpacePortReinforced
-    entity: RMCWindowFrameHybrisaSpacePortReinforced
+  - node: windowFrameHybrisa
+    entity: RMCWindowFrameHybrisa
     edges:
     - to: start
       completed:
@@ -19,8 +19,9 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
-    - to: windowHybrisaSpacePortReinforced
+    - to: windowHybrisa
       completed:
       - !type:SnapToGrid
         southRotation: true
@@ -31,10 +32,10 @@
         amount: 2
         doAfter: 2
 
-  - node: windowHybrisaSpacePortReinforced
-    entity: RMCWindowHybrisaSpacePortReinforced
+  - node: windowHybrisa
+    entity: RMCWindowHybrisa
     edges:
-    - to: windowFrameHybrisaSpacePortReinforced
+    - to: windowFrameHybrisa
       completed:
       - !type:SnapToGrid
         southRotation: true
