--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_strata_reinforced.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_strata_reinforced.yml
@@ -1,12 +1,12 @@
 - type: constructionGraph
   parent: RMC
-  id: RMCWindowHybrisaMedicalReinforced
+  id: RMCWindowStrataReinforced
   start: start
   graph:
   - node: start # not currently buildable
 
-  - node: windowFrameHybrisaMedicalReinforced
-    entity: RMCWindowFrameHybrisaMedicalReinforced
+  - node: windowFrameStrataReinforced
+    entity: RMCWindowFrameStrataReinforced
     edges:
     - to: start
       completed:
@@ -19,8 +19,9 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
-    - to: windowHybrisaMedicalReinforced
+    - to: windowStrataReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
@@ -31,10 +32,10 @@
         amount: 2
         doAfter: 2
 
-  - node: windowHybrisaMedicalReinforced
-    entity: RMCWindowHybrisaMedicalReinforced
+  - node: windowStrataReinforced
+    entity: RMCWindowStrataReinforced
     edges:
-    - to: windowFrameHybrisaMedicalReinforced
+    - to: windowFrameStrataReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
