--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_trijent.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_trijent.yml
@@ -19,6 +19,7 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
     - to: windowChigusa
       completed:
@@ -71,6 +72,7 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
     - to: windowHangar
       completed:
@@ -123,6 +125,7 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
     - to: windowBunker
       completed:
