--- a/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_white.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/Graphs/Structures/window_white.yml
@@ -1,12 +1,12 @@
 - type: constructionGraph
   parent: RMC
-  id: RMCWindowHybrisa
+  id: RMCWindowWhite
   start: start
   graph:
   - node: start # not currently buildable
 
-  - node: windowFrameHybrisa
-    entity: RMCWindowFrameHybrisa
+  - node: windowFrameWhite
+    entity: RMCWindowFrameWhite
     edges:
     - to: start
       completed:
@@ -19,27 +19,28 @@
       steps:
       - tool: Anchoring
         doAfter: 2
+        duplicateConditions: All
 
-    - to: windowHybrisa
+    - to: windowWhiteReinforced
       completed:
       - !type:SnapToGrid
         southRotation: true
       conditions:
       - !type:EntityAnchored {}
       steps:
-      - material: CMGlass
+      - material: CMGlassReinforced
         amount: 2
         doAfter: 2
 
-  - node: windowHybrisa
-    entity: RMCWindowHybrisa
+  - node: windowWhiteReinforced
+    entity: CMWindowReinforcedWhite
     edges:
-    - to: windowFrameHybrisa
+    - to: windowFrameWhite
       completed:
       - !type:SnapToGrid
         southRotation: true
       - !type:SpawnPrototype
-        prototype: CMSheetGlass1
+        prototype: CMSheetGlassReinforced1
         amount: 2
       conditions:
       - !type:EntityAnchored {}
