Fix resin whisperer hivelord being able to stack multiple weed nodes on the same tile

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
@@ -36,6 +36,7 @@
       Brute:
         collection: XenoResinBreak
   - type: XenoConstruct
+  - type: XenoDestroyWeedNodes
   - type: RMCWallExplosionDeletable
   - type: DestroyedByExplosionType
   - type: NpcFactionMember
