--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_base_hive.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_base_hive.yml
@@ -23,7 +23,8 @@
     priority: -1
     transparency: 0.2
   - type: XenoConstruct
-    destroyWeedNodes: false
+  - type: XenoDestroyWeedNodes
+    enabled: false
   - type: MeleeReceivedMultiplier
     otherMultiplier: 8.2
   - type: XenoAnnounceStructureDestruction
