--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_floor_resin.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_floor_resin.yml
@@ -45,7 +45,8 @@
       Brute:
         collection: XenoMove
   - type: XenoConstruct
-    destroyWeedNodes: false
+  - type: XenoDestroyWeedNodes
+    enabled: false
   - type: RMCNightVisionVisible
     priority: -1
     transparency: 0.2
