--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_doors.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_doors.yml
@@ -85,7 +85,8 @@
   - type: ExplosionResistance
     damageCoefficient: 7.5 # Doors take 15x explosive damage, resin doors reduce that by 50%
   - type: XenoConstruct
-    destroyWeedNodes: false
+  - type: XenoDestroyWeedNodes
+    enabled: false
   - type: ResinDoor
   - type: AllowWeedSpread
   - type: ResinSurgeReinforcable
