--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_resin_hole.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_resin_hole.yml
@@ -87,6 +87,7 @@
   - type: Corrodible
     isCorrodible: false
   - type: XenoConstruct
-    destroyWeedNodes: false
+  - type: XenoDestroyWeedNodes
+    enabled: false
   - type: RequireProjectileTarget
   - type: DeletedByWeedKiller
