Fix planet weya med pluses not being all access, fix batteryless defib on trijent

--- a/Resources/Maps/_RMC14/shiva.yml
+++ b/Resources/Maps/_RMC14/shiva.yml
@@ -54449,7 +54449,7 @@ entities:
     - type: Transform
       pos: 3.5,128.5
       parent: 1
-- proto: CMVendorMedical
+- proto: CMVendorMedicalAllAccess
   entities:
   - uid: 6490
     components:
