no hardy node on semi weedable

--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_construction_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_construction_actions.yml
@@ -1,4 +1,4 @@
-﻿- type: entity
+- type: entity
   id: CMGuidebookActionXenoBase
   abstract: true
   components:
@@ -155,7 +155,6 @@
     event: !type:XenoPlantWeedsActionEvent
       plasmaCost: 125
       prototype: XenoHardyWeedsSource
-      useOnSemiWeedable: true
     useDelay: 120
 
 # For healer drone
