--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -3,6 +3,7 @@
   - CMXenoDeveloped
   - CMXenoTail
   - RMCXenoSpeechSounds
+  - RMCXenoMobCollision
   id: CMXenoQueen
   name: Queen
   description: A huge, looming alien creature. The biggest and the baddest.
